--- a/assignment3/part3/style.css
+++ b/assignment3/part3/style.css
@@ -27,15 +27,32 @@ aside {
   line-height: 1rem;
 }
 
+li>a {
+  text-decoration: none;
+  color: maroon;
+
+}
 nav {
   float: left;
   width: 20%;
+  font-style: none;
 }
 
-header, section, aside, nav, footer {
-  font-size: 2em;
-  padding: 20px;
-  font-family: "";
+span a{
+  color: maroon;
+}
+
+.container{
+  line-height: 2rem;
+  text-decoration: none;
+}
+
+.container>li{
+  
+}
+
+footer{
+  clear: both;
 }
 
 header, section, aside, nav, footer {
@@ -47,6 +64,5 @@ header, section, aside, nav, footer {
 header, footer {
   border-top: 5px solid #a66;
   border-bottom: 5px solid #a66;
+  text-align: center;
 }
-
-/* WRITE YOUR CODE BELOW HERE */
