--- a/assignment3/part4/styles.css
+++ b/assignment3/part4/styles.css
@@ -21,8 +21,9 @@ body {
     margin: 0 auto;
     padding: 0 20px;
     max-width: 980px;
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    gap: 20px;
   }
   
   nav {
@@ -52,12 +53,14 @@ body {
     margin: 0;
     padding: 0;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: 1fr 1fr;
     gap: 2px;
   }
 
   .feature {
       width: 200px;
+      float: left;
+      margin: 0 20px 20px 0;
   }
 
   aside{
