--- a/assignment3/part4/styles.css
+++ b/assignment3/part4/styles.css
@@ -17,6 +17,7 @@ body {
     max-width: 980px;
   }
   
+  /*changes in grid*/
   .grid {
     margin: 0 auto;
     padding: 0 20px;
@@ -42,12 +43,14 @@ body {
     justify-content: space-between;
   }
   
+  /*changes in nav a*/
   nav a {
     color: #fff;
     text-decoration: none;
     padding: .5em 1em;
   }
   
+  /*changes in photos*/
   .photos {
     list-style: none;
     margin: 0;
@@ -57,6 +60,7 @@ body {
     gap: 1px;
   }
 
+/*
   .feature {
       width: 200px;
       float: left;
